--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.71.10",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-toast-notifications": "^3.3.1"
@@ -42,6 +44,11 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   },
   "jest": {
     "preset": "react-native"
