--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
