--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-animated-pagination-dots": "^0.1.73",
