--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-animated-pagination-dots": "^0.1.73",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
@@ -29,7 +30,10 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-toast-notifications": "^3.3.1"
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
