--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/messaging": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
