--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "moment": "^2.29.4",
+    "myfatoorah-reactnative": "^0.0.490",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-check-box": "^2.1.7",
     "react-native-country-codes-picker": "^2.3.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
