--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/messaging": "^18.0.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "moment": "^2.29.4",
-    "myfatoorah-reactnative": "^0.0.490",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-animated-pagination-dots": "^0.1.73",
@@ -29,6 +29,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^5.8.0",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.2.2"
