--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-linear-gradient": "^2.8.1",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-otp-entry": "^1.1.5",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
