--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/analytics": "^18.3.0",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/messaging": "^18.0.0",
+    "@react-native-firebase/remote-config": "^18.4.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -30,6 +31,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^7.0.0",
     "react-native-linear-gradient": "^2.8.1",
     "react-native-material-ripple": "^0.9.1",
     "react-native-material-textfield": "^0.16.1",
@@ -41,6 +43,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-toast-notifications": "^3.3.1",
+    "react-native-use-keyboard-height": "^0.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.2.2"
   },
